# A-agento

./: AGENTS.md  README.md  pyproject.toml
examples/prompts/: README.md  confirm_action_template.prompt.example  extract_actions_template.prompt.example  generi_enc.prompt.example  generi_json.prompt.example  generi_md.prompt.example  generi_txt.prompt.example  reply_template.prompt.example  style_section_template.prompt.example  summarize_template.prompt.example  system_actions.prompt.example  system_base.prompt.example  system_reply.prompt.example  system_summarize.prompt.example
src/A_agento/: __init__.py  agordo.py  agordo_crud.py  cli.py  contract.py  prompt_loader.py  prompts.py  provider_state.py  registration.py  service.py  stilo.py  tools.py
src/A_agento/commands/: __init__.py  _context_helpers.py  _enhancement_helpers.py  _helpers.py  _knowledge_helpers.py  email.py  enhancement.py  knowledge.py  translation.py
src/A_agento/data/: __init__.py  _storage_base.py  _storage_history.py  _storage_samples.py  _storage_templates.py  provider_config.py  storage.py
src/A_agento/prompts/: enc_rules.md  generi_enc.md  generi_enc.prompt  generi_json.md  generi_md.md  generi_md.prompt  generi_txt.md  plibonigi.md  plibonigi_enc.md  traduki.md
src/A_agento/service/: __init__.py  action_mixin.py  agent_service.py  helpers.py  registry.py  summarization_mixin.py
src/A_agento/tools/: __init__.py  _retry.py  cleaners.py  definitions.py  executor.py  (+2 more)
tests/: __init__.py  conftest.py  test_agordo.py  test_cli.py  test_enhancement.py  test_knowledge.py  test_service.py  test_tools.py  test_traduki.py
