[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "A-agento"
version = "0.1.0"
description = "A — AI email agent with LLM summarization and action extraction"
authors = [{name = "Ron"}]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "A-core>=0.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]
openai = ["openai>=1.0.0"]
ollama = ["httpx>=0.27.0"]

[project.entry-points."A.commands"]
agento = "A_agento.cli:app"

[project.entry-points."A.ai_commands"]
# The name MUST match the A.commands entry point name (e.g. "retposto" for A-lien)
retposto = "A_agento.registration:get_lien_ai_app"
encik = "A_agento.registration:get_encik_ai_app"

[tool.hatch.build.targets.wheel]
packages = ["src/A_agento"]

[tool.uv.sources]
a-core = { path = "../A-core" }

[tool.poetry]
name = "A-agento"
version = "0.1.0"
description = "A — AI email agent with LLM summarization and action extraction"
authors = ["Ron"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
A-core = { path = "../A-core" }
typer = {version = ">=0.12.0", extras = ["rich"]}
rich = ">=13.0.0"
openai = {version = ">=1.0.0", optional = true}
httpx = {version = ">=0.27.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]